<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ new_world.xml is part of Wa-Tor (C) 2016 by Dirk Gassen.
  ~
  ~ Wa-Tor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Wa-Tor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">
	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal">
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/world_size_label"
		/>
		<EditText
				android:id="@+id/world_width"
				android:layout_width="60dp"
				android:layout_height="wrap_content"
				android:inputType="number"
				tools:text="200"/>
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/world_size_x_label"
		/>
		<EditText
				android:id="@+id/world_height"
				android:layout_width="40dp"
				android:layout_height="wrap_content"
				android:inputType="number"
				tools:text="100"
		/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:baselineAligned="false">
		<RelativeLayout
				android:id="@+id/left_column"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1">
			<EditText
					android:id="@+id/initial_fish_count"
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_alignParentEnd="true"
					android:inputType="number"
					tools:text="200"/>
			<EditText
					android:id="@+id/fish_breed_time"
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_alignParentEnd="true"
					android:layout_below="@id/initial_fish_count"
					android:inputType="number"
					tools:text="3"
			/>
			<TextView
					android:id="@+id/initial_fish_count_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/initial_fish_count_label"
					android:layout_toLeftOf="@id/initial_fish_count"
					android:layout_toStartOf="@id/initial_fish_count"
					android:layout_alignBaseline="@id/initial_fish_count"
			/>
			<TextView
					android:id="@+id/fish_breed_time_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/fish_breed_time_label"
					android:layout_toLeftOf="@id/fish_breed_time"
					android:layout_toStartOf="@id/fish_breed_time"
					android:layout_alignBaseline="@id/fish_breed_time"
			/>
		</RelativeLayout>

		<RelativeLayout
				android:id="@+id/right_column"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_weight="1">
			<EditText
					android:id="@+id/initial_shark_count"
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_alignParentEnd="true"
					android:inputType="number"
					tools:text="100"
			/>
			<EditText
					android:id="@+id/shark_breed_time"
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_alignParentEnd="true"
					android:layout_below="@id/initial_shark_count"
					android:inputType="number"
					tools:text="10"
			/>
			<EditText
					android:id="@+id/shark_starve"
					android:layout_width="40dp"
					android:layout_height="wrap_content"
					android:layout_alignParentRight="true"
					android:layout_alignParentEnd="true"
					android:layout_below="@id/shark_breed_time"
					android:inputType="number"
					tools:text="3"
			/>
			<TextView
					android:id="@+id/initial_shark_count_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/initial_shark_count_label"
					android:layout_toLeftOf="@id/initial_shark_count"
					android:layout_toStartOf="@id/initial_shark_count"
					android:layout_alignBaseline="@id/initial_shark_count"
			/>
			<TextView
					android:id="@+id/shark_breed_time_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/shark_breed_time"
					android:layout_toLeftOf="@id/shark_breed_time"
					android:layout_toStartOf="@id/shark_breed_time"
					android:layout_alignBaseline="@id/shark_breed_time"
			/>
			<TextView
					android:id="@+id/shark_starve_label"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/shark_starve_time_label"
					android:layout_toLeftOf="@id/shark_starve"
					android:layout_toStartOf="@id/shark_starve"
					android:layout_alignBaseline="@id/shark_starve"
			/>
		</RelativeLayout>
	</LinearLayout>

	<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:layout_gravity="center_horizontal">
		<Button
				android:id="@+id/cancel_new_world"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/cancel"/>
		<Button
				android:id="@+id/create_new_world"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/create_new_world"/>
	</LinearLayout>

</LinearLayout>