<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ main_layout.xml is part of Wa-Tor (C) 2016 by Dirk Gassen.
  ~
  ~ Wa-Tor is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Wa-Tor is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<android.support.v4.widget.DrawerLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		xmlns:tools="http://schemas.android.com/tools"
		android:id="@+id/drawer_layout"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

	<!-- First child: main content -->
	<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<android.support.v7.widget.Toolbar
				android:id="@+id/main_toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				android:background="?attr/colorPrimary"
				android:elevation="4dp"
				android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
				app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
				tools:ignore="UnusedAttribute"/>

		<fragment
				android:name="com.dirkgassen.wator.ui.WatorStatistics"
				android:id="@+id/wator_statistics_fragment"
				android:layout_width="match_parent"
				android:layout_height="80dp"
				android:layout_alignParentBottom="true"
				tools:layout="@layout/fish_shark_history_graph" />

		<fragment
				android:name="com.dirkgassen.wator.ui.WatorDisplay"
				android:id="@+id/wator_display_fragment"
				android:layout_width="match_parent"
				android:layout_height="fill_parent"
				android:layout_below="@+id/main_toolbar"
				android:layout_above="@id/wator_statistics_fragment"
				tools:layout="@layout/wator_display"/>

		<FrameLayout
				android:name="com.dirkgassen.wator.ui.NewWorld"
				android:id="@+id/new_world_fragment_container"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:alpha=".8"
				android:background="@android:color/white"
				android:layout_below="@id/main_toolbar"
				android:layout_centerHorizontal="true"
				android:layout_marginLeft="20dp"
				android:layout_marginRight="20dp"
				android:elevation="2dp"
				android:visibility="gone"
				tools:layout="@layout/new_world"
				tools:ignore="UnusedAttribute">
		</FrameLayout>

	</RelativeLayout>

	<!-- Second child: the navigation drawer -->
	<RelativeLayout
			android:id="@+id/drawer_pane"
			android:layout_width="280dp"
			android:layout_height="match_parent"
			android:background="#ffffffff"
			android:layout_gravity="start"
			tools:layout_gravity="">

		<ImageView
				android:id="@+id/wator_logo"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/dark_water"
				android:scaleType="fitEnd"
				android:src="@drawable/wator_logo"
				android:padding="20dp"
				android:contentDescription="@string/wator_logo_description" />

		<TextView
				android:id="@+id/drawer_subtitle"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/wator_synopsis"
				android:textSize="16sp"
				android:layout_alignBottom="@id/wator_logo"
				android:layout_alignLeft="@id/wator_logo"
				android:layout_alignStart="@id/wator_logo"
				android:padding="10dp"
				android:textColor="@android:color/white" />

		<TextView
				android:id="@+id/drawer_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/wator_name"
				android:textColor="@android:color/white"
				android:textSize="24sp"
				android:textStyle="bold"
				android:padding="10dp"
				android:layout_above="@id/drawer_subtitle"
				android:layout_alignLeft="@id/drawer_subtitle"
				android:layout_alignStart="@id/drawer_subtitle" />

		<TextView
				android:id="@+id/threads_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_alignTop="@+id/threads"
				android:layout_alignBottom="@+id/threads"
				android:layout_below="@id/wator_logo"
				android:padding="4dp"
				android:text="@string/threads_label"
				android:gravity="center_vertical"/>

		<com.dirkgassen.wator.ui.RangeSlider
				android:id="@+id/threads"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/wator_logo"
				android:layout_toRightOf="@id/threads_label"
				android:layout_toEndOf="@id/threads_label"
				android:value="1"
				app:sliderThickness="4dp"
				app:valueSet="@string/threads_value_set"
				app:thumbPadding="2dp"
				android:padding="6dp"
				android:textSize="12sp"
				android:color="@color/fish_old"/>

		<TextView
				android:id="@+id/desired_fps_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_alignTop="@+id/desired_fps"
				android:layout_alignBottom="@+id/desired_fps"
				android:layout_below="@id/threads"
				android:padding="4dp"
				android:text="@string/desired_fps_label"
				android:gravity="center_vertical" />

		<com.dirkgassen.wator.ui.RangeSlider
				android:id="@+id/desired_fps"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@id/threads"
				android:layout_toRightOf="@id/desired_fps_label"
				android:layout_toEndOf="@id/desired_fps_label"
				android:value="80"
				app:thumbFormat="@string/fps_format"
				app:thumbPadding="2dp"
				app:sliderThickness="4dp"
				app:valueSet="@string/desired_fps_value_set"
				android:padding="6dp"
				android:textSize="12sp"
				android:color="@color/fish_old"/>

		<TextView
				android:id="@+id/label_fps"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/desired_fps"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:padding="4dp"
				android:text="@string/current_fps_label"/>

		<TextView
				android:id="@+id/fps_simulator"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/desired_fps"
				android:layout_alignBaseline="@id/label_fps"
				android:layout_toRightOf="@id/label_fps"
				android:layout_toEndOf="@id/label_fps"
				android:layout_alignLeft="@id/desired_fps"
				android:layout_alignStart="@id/desired_fps"
				android:padding="4dp"
				tools:text="Simulation: 20fps"/>

		<TextView
				android:id="@+id/fps_drawing"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/fps_simulator"
				android:layout_alignLeft="@id/fps_simulator"
				android:layout_alignStart="@id/fps_simulator"
				android:padding="4dp"
				tools:text="Drawing: 30fps"/>

		<ListView
				android:id="@+id/drawer_commands"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_below="@id/fps_drawing"
				android:choiceMode="singleChoice"
				android:padding="8dp"
				tools:listitem="@layout/drawer_command_item"/>

	</RelativeLayout>
</android.support.v4.widget.DrawerLayout>
