<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ about.xml is part of WebFeeder (C) 2015 by Dirk Gassen.
  ~
  ~ WebFeeder is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ WebFeeder is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

	<RelativeLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="14sp">

		<TextView
				android:id="@+id/version_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:padding="2sp"
				android:text="@string/version_label"
				android:textStyle="bold"/>

		<TextView
				android:id="@+id/version"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBaseline="@+id/version_label"
				android:layout_toEndOf="@+id/version_label"
				android:layout_toRightOf="@+id/version_label"
				android:padding="2sp"/>

		<TextView
				android:id="@+id/website_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_below="@id/version_label"
				android:padding="2sp"
				android:text="@string/website_label"
				android:textStyle="bold"/>

		<TextView
				android:id="@+id/website"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignBaseline="@+id/website_label"
				android:layout_alignLeft="@id/version"
				android:layout_alignStart="@id/version"
				android:layout_toEndOf="@+id/version_label"
				android:layout_toRightOf="@+id/version_label"
				android:autoLink="web"
				android:padding="2sp"
				android:text="@string/website"/>

		<TextView
				android:id="@+id/license_intro"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:layout_alignParentStart="true"
				android:layout_below="@id/website_label"
				android:padding="2sp"
				android:text="@string/license_intro"/>

		<TextView
				android:id="@+id/license"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentEnd="true"
				android:layout_alignParentLeft="true"
				android:layout_alignParentRight="true"
				android:layout_alignParentStart="true"
				android:layout_below="@id/license_intro"
				android:padding="2sp"
				android:text="@string/license"/>
	</RelativeLayout>

</ScrollView>